fixed overflow issue with header (hopefully)

--- a/project/style.css
+++ b/project/style.css
@@ -41,6 +41,7 @@
         line-height: 1.5;
     }
     header {
+        position: relative;
         height: 65vh;
         background-image: url(assets/img/studentsbg.png);
         background-attachment:fixed;
@@ -52,8 +53,10 @@
         color: white;
     }
     header > div {
-        position:relative;
-        top: 4rem;
+        position:absolute;
+        bottom: -4rem;
+        left: 12.5vw;
+        right: 12.5vw;
         width: 65vw;
         background-color: #c5192d;
         padding-top:2rem;
@@ -63,7 +66,7 @@
     header > div > p {
         font-size: 1.2rem;
         text-align: left;
-        display: block;
+        display: inline-block;
         padding-left: 2rem;
     }
     main {
@@ -77,7 +80,7 @@
         background-color: #c5192d;
         padding:2rem ;
         margin: auto;
-        margin-top:0;
+        margin-top: 6rem;
     }
     ul >li:nth-child(1)::marker {
         content: "\1F64C"
@@ -114,7 +117,6 @@
         display: grid;
         grid-template-columns: 45% 45%;
         column-gap: 10%;
-        margin-top:4rem;
     }
     main > article {
         display: grid;
@@ -162,6 +164,7 @@
         line-height: 1.5;
     }
     header {
+        position: relative;
         height: 65vh;
         background-image: url(assets/img/studentsbg.png);
         background-attachment:fixed;
@@ -173,8 +176,10 @@
         color: white;
     }
     header > div {
-        position:relative;
-        top: 4rem;
+        position:absolute;
+        bottom: -4rem;
+        left: 2.5vw;
+        right: 2.5vw;
         width: 85vw;
         background-color: #c5192d;
         padding-top:2rem;
@@ -184,7 +189,7 @@
     header > div > p {
         font-size: 1.2rem;
         text-align: left;
-        display: block;
+        display: inline-block;
         padding-left: 2rem;
     }
     main {
@@ -198,7 +203,6 @@
         background-color: #c5192d;
         padding:2rem ;
         margin: auto;
-        margin-top:0;
     }
     ul >li:nth-child(1)::marker {
         content: "\1F64C"
@@ -235,7 +239,7 @@
         display: grid;
         grid-template-columns: 45% 45%;
         column-gap: 10%;
-        margin-top:4vh;
+        margin-top:6rem;
     }
     main > article {
         display: grid;
@@ -283,6 +287,7 @@
         line-height: 1.5;
     }
     header {
+        position: relative;
         height: 55vh;
         background-image: url(assets/img/studentsbg.png);
         background-attachment:fixed;
@@ -294,8 +299,10 @@
         color: white;
     }
     header > div {
-        position:relative;
-        top: 4rem;
+        position:absolute;
+        bottom: -4rem;
+        left: 0.5vw;
+        right: 0.5vw;
         width: 95vw;
         background-color: #c5192d;
         padding-top:2rem;
@@ -305,7 +312,7 @@
     header > div > p {
         font-size: 1.2rem;
         text-align: left;
-        display: block;
+        display: inline-block;
         padding-left: 2rem;
     }
     main {
@@ -319,7 +326,7 @@
         background-color: #c5192d;
         padding:2rem ;
         margin: auto;
-        margin-top:4rem;
+        margin-top:6rem;
     }
     ul >li:nth-child(1)::marker {
         content: "\1F64C"
